Regression. Pressing GG should give the tracker an offset. Instead it moves the tracker #100280

Closed
opened 2022-08-08 10:03:37 +02:00 by Lucas · 9 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59

Blender Version
Broken: version: 3.3.0 Beta, branch: master, commit date: 2022-08-07 20:54, hash: e4938b163e
Worked: 3.2.2

Caused by 791bfae1d6

Short description of error
Pressing GG should be give the tracker an offset. Instead it moves the tracker

Exact steps for others to reproduce the error
Press G twice. Observe that it moves the tracker instead of giving an offset XY.BlenderVFXBug.zip

bug.png

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59 **Blender Version** Broken: version: 3.3.0 Beta, branch: master, commit date: 2022-08-07 20:54, hash: `e4938b163e` Worked: 3.2.2 Caused by 791bfae1d6 **Short description of error** Pressing GG should be give the tracker an offset. Instead it moves the tracker **Exact steps for others to reproduce the error** Press G twice. Observe that it moves the tracker instead of giving an offset XY.[BlenderVFXBug.zip](https://archive.blender.org/developer/F13345894/BlenderVFXBug.zip) ![bug.png](https://archive.blender.org/developer/F13345899/bug.png)
Author

Added subscriber: @Xorrito

Added subscriber: @Xorrito
Lucas changed title from Regression. Pressing GG should be give the tracker an offset. Instead it moves the tracker to Regression. Pressing GG should give the tracker an offset. Instead it moves the tracker 2022-08-08 10:10:57 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check when that changed

Can confirm, will check when that changed
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Caused by 791bfae1d6

@mano-wii : mind checking?

Caused by 791bfae1d6 @mano-wii : mind checking?

This issue was referenced by b72eddac61

This issue was referenced by b72eddac6190353714745756dcc335f98cda1369

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-08-08 15:59:50 +02:00

This issue was referenced by b3fc8206be

This issue was referenced by b3fc8206be422a7d0155f0282c2493887e441dd3
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100280
No description provided.